--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 .modal-header {
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
-  color: #333;
+  color: #888;
 }
 
 .modal-input,
@@ -69,3 +69,9 @@ margin-top: 1rem;
 
 }
 
+.mobile-gift-card{
+  background-color: #EADBD8;
+  box-shadow: 5px 5px grey;
+  border-radius: 5px;
+
+}
